# LearnCMake

./: .gitignore  CMakeLists.txt  LearnCMakeConf.h.in  README.md  config.sh  main.cpp  run.sh
MyMathLib/: CMakeLists.txt  MathLib.cpp  MathLib.h
